# ocaml-type-classes

./: .gitignore  .travis.yml  LICENSE  Makefile  OMakefile  README.md  ansi_color.ml  ansi_color.mli  demo.ml  dune  dune-project  eq.ml  eq.mli  functor.ml  functor.mli  higher.ml  higher.mli  higher_list.mli  num.ml  num.mli  ocaml-type-classes.opam  ord.ml  ord.mli  prelude.ml  prelude.mli  show.ml  show.mli
lib/: dune  eq.ml  functor.mli  higher_list.ml  higher_option.ml  higher_option.mli  num.ml  ord.mli  prelude.ml  show.ml  show.mli
