opam-version: "1.2"
name: "ocaml-type-classes"
version: "~unknown"
maintainer: "Hongchang Wu <wuhc85@gmail.com>"
authors: "Hongchang Wu <wuhc85@gmail.com>"
homepage: "https://github.com/hongchangwu/ocaml-type-classes"
bug-reports: "https://github.com/hongchangwu/ocaml-type-classes/issues"
license: "MIT"
dev-repo: "https://github.com/hongchangwu/ocaml-type-classes.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" {build}
  "higher"
]
